[package]
name = "omnect-crypto"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
openssl = "0.10"
openssl-sys = "0.9"


rcgen = { version = "0.12", features = ["pem", "ring", "x509-parser"], default-features = false }
rustls = { version = "0.23", features = [ "logging" ]}
rustls-pemfile = "2.0"
time = "0.3"